address-book-frontend/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

}

body {
  background-color: rgba(243, 235, 246, 255);
}

.global-container {
  width: 100%;
  height: 100vh;
  box-sizing: border-box;
  font-family: sans-serif;
  display: flex;
  flex-direction: column;
}










.navbar {
  background-color: rgba(135, 109, 150, 255);
  display: flex;
  justify-content: space-between;
  padding-left: 10%;
  padding-right: 10%;
  color: white;
  height: 70px;
  /* box-shadow: 0 0 px rgba(135, 109, 150, 255); */
}

.main-logo {
  height: 100%;
  font-size: 30px;
  font-weight: bold;
  user-select: none;
  display: flex;
  justify-content: center;
  align-items: center;
}

.navbar-menu {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 40px;
  
}

.navbar-li {
  height: 50%;
  font-size: 18px;
  cursor: pointer;
  user-select: none;
  list-style-type: none;
  font-weight: bold;
  padding: 0 10px 0 10px;
  border-radius: 10px;
}

.navbar-li>div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
}












.home-body-container {
  width: 80%;
  align-self: center;
  display: flex;
  flex-wrap: wrap;
  gap: 50px;
  justify-content: center;
  padding-bottom: 100px;
}



.filter-input {
  margin-top: 100px;
  margin-bottom: 80px;
  width: 50%;
  height: 40px;
  border: 1px solid rgba(135, 109, 150, 255);
  border-radius: 20px;
  background-color: rgba(250, 250, 250, 255);
  text-align: center;
  font-size: 20px;
  color: rgba(135, 109, 150, 255);
  align-self: center;
}

.filter-input::placeholder {
  color: rgba(135, 109, 150, 255);
}









.contact-item {
  width: 300px;
  height: 180px;
  background-color: white;
  display: flex;
  padding: 10px;
  border-radius: 10px;
  box-shadow: 0 0 3px #ccc;
}

.info-container {
  width: 220px;
  /* background-color: beige; */
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.location-container {
  width: 80px;
  /* background-color: rgb(187, 187, 101); */
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-end;
}

.map-icon {
  cursor: pointer;
  user-select: none;
  font-size: 50px;
}

.delete-icon {
  cursor: pointer;
  user-select: none;
  font-size: 22px;
  margin-right: 10px;
}

.contact-name {
  font-size: 22px;
  color: rgba(135, 109, 150, 255);
  font-weight: bold;
  margin-left: 15px;
}

.contact-info {
  font-weight: bold;
  color: rgba(135, 109, 150, 255);

}








.addcontact-body-container {
  align-self: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-bottom: 100px;
}

.addcontact-form-container {
  margin-top: 100px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 500px;
  height: fit-content;
  padding: 20px;
  background-color: rgba(255, 255, 255, 255);
  border-radius: 20px;
  box-shadow: 0 0 20px #ccc;
}

.addcontact-form-container>p {
  margin-top: 20px;
  font-size: 25px;
  font-weight: bold;
  color: rgba(135, 109, 150, 255);
  align-self: center;
  margin-bottom: 30px;
}



.addcontact-group {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}
.add-contact-label{
  color: rgba(135, 109, 150, 255);
  font-size: 20px;
  align-self: center;
}

.addcontact-input {
  width: 300px;
  height: 40px;
  border: 1px solid rgba(135, 109, 150, 255);
  border-radius: 10px;
  background-color: rgba(250, 250, 250, 255);
  text-align: center;
  font-size: 20px;
  color: rgba(135, 109, 150, 255);
}


.showlocation-group {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}

.location-show {
  width: 115px;
  pointer-events: none;
  cursor: default;
  height: 40px;
  border: 1px solid rgba(135, 109, 150, 255);
  border-radius: 10px;
  background-color: rgba(250, 250, 250, 255);
  text-align: center;
  font-size: 20px;
  color: rgba(135, 109, 150, 255);
}

.location-show:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: none;
}

.location-show:nth-child(2) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.pick-contact-btn {
  width: 60px;
  height: 40px;
  border-radius: 10px;
  border: none;
  background-color: rgba(135, 109, 150, 255);
  color: rgba(250, 250, 250, 255);
  font-size: 20px;
  font-weight: bold;
  cursor: pointer;
  margin-left: 10px;
  margin-bottom: 2px;
}


.add-contact-btn {
  width: 140px;
  height: 40px;
  border-radius: 10px;
  border: none;
  background-color: rgba(135, 109, 150, 255);
  color: rgba(250, 250, 250, 255);
  font-size: 20px;
  font-weight: bold;
  cursor: pointer;
  align-self: center;
  margin-top: 20px;
  margin-bottom: 30px;
}

.add-contact-btn:active {
  margin-top: 21px;
  margin-bottom: 29px;
}










.login-body-container {
  margin-top: 30vh;
  align-self: center;
}

.signup-body-container {
  margin-top: 20vh;
  align-self: center;
}

.login-form-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 400px;
  height: fit-content;
  padding: 20px;
  background-color: rgba(255, 255, 255, 255);
  border-radius: 20px;
  box-shadow: 0 0 20px #ccc;
  /* color: white; */
}

.login-form-container>p {
  margin-top: 20px;
  font-size: 25px;
  font-weight: bold;
  margin-bottom: 50px;
  color: rgba(135, 109, 150, 255);
}


.login-input {
  width: 90%;
  height: 40px;
  border: 1px solid rgba(135, 109, 150, 255);
  border-radius: 20px;
  background-color: rgba(250, 250, 250, 255);
  text-align: center;
  font-size: 20px;
  color: rgba(135, 109, 150, 255);
  margin-bottom: 30px;
}

.login-input::placeholder {
  color: rgba(135, 109, 150, 255);
}


.li-btn {
  width: 110px;
  height: 35px;
  border-radius: 20px;
  border: none;
  background-color: rgba(135, 109, 150, 255);
  color: rgba(250, 250, 250, 255);
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 30px;
  cursor: pointer;
}

.li-btn:active {
  margin-top: 1px;
  margin-bottom: 29px;
}

.auth-link {
  text-decoration: none;
  font-size: 18px;
  color: rgba(159, 144, 171, 255);
  margin-bottom: 40px;
}


















.viewmap-body-container {
  height: 90vh;
  width: 100vw;
}

.map-container {
  height: 100%;
  width: 100%;
}




#map_container {
  display: none;
}









/* MEDIA QUERIES */

@media (max-width: 600px) {
  .navbar-menu {
    gap: 20px;
  }
}

